--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
 		"js-yaml": "^4.1.0",
 		"jspdf": "^2.5.1",
 		"jspdf-autotable": "^5.0.7",
+		"mathjax-full": "^3.2.2",
 		"obsidian": "latest",
+		"remark-math": "^6.0.0",
 		"remark-frontmatter": "^5.0.0",
 		"remark-parse": "^11.0.0",
 		"unified": "^11.0.5",
